fixed aligning issue. Will work on tutorial now

--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -9,6 +9,7 @@ body {
   font-size: 7rem;
   font-weight: bold;
   margin-bottom: 7rem;
+  text-align: center;
 }
 
 /* Widget Page */
